# ZoAD_prototype

./: CMakeCache.txt  CMakeLists.txt  IO_request.cpp  IO_request.h  IZG.cpp  Makefile  README.md  Readme.md  Userdata.cpp  Userdata.h  Zone.cpp  cmake_install.cmake  main.cpp  main_backup.cpp  zoad.cpp  zoad.h
